@@ -7,6 +7,18 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
+    <div class="container">
+        Container
+        <div class="sidebar">
+            Sidebar
+        </div>
+        <div class="header">
+            Header
+        </div>
+        <div class="main-content">
+            Main Content
+        </div>
+    </div>
     <img src="images/smile.gif">
 </body>
 </html>
